--- a/vignettes/nmecr_overview.Rmd
+++ b/vignettes/nmecr_overview.Rmd
@@ -296,7 +296,7 @@ The plots show that the Time-of-Week and Temperature algorithm models the energy
 
 This insight can be confirmed through model statistics by using the `calculate_summary_statistics()` function. The following table summarizes the results from this function for each of the models assessed above:
 
-```{r stats, results='markup', echo=FALSE}
+```{r stats, results='markup', echo=TRUE}
 
 SLR_stats <- calculate_summary_statistics(SLR_model)
 
