--- a/vignettes/nmecr_predictability.Rmd
+++ b/vignettes/nmecr_predictability.Rmd
@@ -4,10 +4,10 @@ author:
 - Mrinalini Sharma^[msharma@kw-engineering.com]
 - David Jump^[djump@kw-engineering.com]
 - Devan Johnson^[johnson@kw-engineering.com]
-date: "December 18, 2019"
+date: "January 6, 2020"
 output:
-  word_document: default
   pdf_document: default
+  word_document: default
 vignette: |
   %\VignetteIndexEntry{Introduction to nmecr} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
 ---
@@ -33,11 +33,11 @@ Meter-based energy efficiency programs are proliferating across the globe. This 
 
 ## Necessity of Predictability Analysis 
 
-Prior to engaging in a meter-based savings project, a good practice from a modeling perspective is to determine whether a sufficiently accurate energy model may be developed. Using a year of pre-installation period energy use data, a modeling algorithm is selected, an energy model is developed, and its goodness of fit metrics are calculated and compared to industry accepted criteria. Adherence to the assumptions of regression modeling may also be checked, as the modeling algorithms in nmecr are each based on ordinary least squares regressions. The four main assumptions of linear regression are:
+Prior to engaging in a meter-based savings project, a good practice from a modeling perspective is to determine whether a sufficiently accurate energy model may be developed. Using a year of pre-installation period energy use data, an energy model is developed, and its goodness of fit metrics are calculated and compared to industry accepted criteria. Adherence to the assumptions of regression modeling may also be checked. The four main assumptions of linear regression are:
 
 - Linearity of data: The relationship between the predictor and the predicted is assumed to be linear
-- Normality of residuals: The residuals are assumed to be normally distributed. Residuals are the difference between the predictor and predicted values.
-- Homoscedasticity: (homogeneity of residual variance): The residuals are assumed to have a constant variance.
+- Normality of residuals: The residuals are assumed to be normally distributed. Residuals are the difference between the actual and predicted values.
+- Homoscedasticity (homogeneity of residual variance): The residuals are assumed to have a constant variance.
 - Independence of residuals: The residuals are assumed to be independent of each other.
 
 ## Data
@@ -69,7 +69,7 @@ head(temp, n=5)
 
 ## Baseline Dataframe for Modeling
 
-`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. If an operating mode dataframe is supplied, `create_dataframe` creates a list with two objects: dataframe, operating_mode_data.
+`create_dataframe()` combines the `eload` and `temp` dataframes into one, filters by the specified start and end dates, and aggregates to an hourly, daily, or a monthly data interval. If operating mode data is supplied, this information is added to the dataframe created by `create_dataframe()`.
 
 ```{r baseline_df, results='markup'}
 
@@ -113,7 +113,7 @@ model_input_options <- assign_model_inputs(timescale_days = NULL, interval_minut
                                            has_temp_knots_defined = FALSE, 
                                            equal_temp_segment_points = TRUE,
                                            temp_segments_numeric = 6, 
-                                           temp_knots_value = c(40, 45, 50, 60, 65, 70), 
+                                           temp_knots_value = c(40, 55, 65, 80, 90), 
                                            initial_breakpoints = c(50,65), 
                                            regression_type = "TOWT")
 
@@ -307,7 +307,7 @@ Using the modeling statistics and the savings uncertainity for 10%, we can deter
 1. CVRMSE: 6.78% (should be < 25%)
 2. NDBE: 0.0000 (should be < 0.005%)
 
-The California Public Utilities Commission requires savings to be detectable above model variations. `nmecr` interprets this using ASHRAE Guideline 14 - 2002's formulation for savings uncertainty, which relates the savings uncertainty to the model goodness of fit metric CV(RMSE), the confidence level, the amount of savings, the amount of data used to develop the model, and the amount of data required to report savings. The formulation includes the correction polynomial developed by Sun and Balthazar for daily and monthly models. It also includes a correction when autocorrelation is present (which occurs mainly in models developed from daily and hourly data). LBNL has shown this uncertainty formulation with correction for autocorrelation underestimates the savings uncertainty. More work on this issue is needed. Until a better formulation is available, `nmecr` uses ASHRAE's method only as an estimation. 
+The California Public Utilities Commission requires savings to be detectable above model variations. `nmecr` interprets this using ASHRAE Guideline 14 - 2002's formulation for savings uncertainty, which relates the savings uncertainty to the model goodness of fit metric CV(RMSE), the confidence level, the amount of savings, the amount of data used to develop the model, and the amount of data required to report savings. The formulation includes the correction polynomial developed by Sun and Balthazar (reference?) for daily and monthly models. It also includes a correction when autocorrelation is present (which occurs mainly in models developed from daily and hourly data). LBNL has shown this uncertainty formulation with correction for autocorrelation underestimates the savings uncertainty. More work on this issue is needed. Until a better formulation is available, `nmecr` uses ASHRAE's method only as an estimation. 
 
 ```{r savings_10 summary, results='markup'}
 
@@ -324,21 +324,75 @@ TOWT_savings_10$savings_summary_df
 
 The savings percentage required to meet the threshold of 50% uncertainty, at the 68% confidence level, is 2% (as shown by the output above, see: savings_pct_for_50pct_uncertainty).
 
-In addition to evaluating the model metrics, it is essential to ensure that the modeled profile follows the actual energy use closely (see Figure 8 above).
+In addition to evaluating the model metrics, it is essential to ensure that the modeled profile follows the actual energy use closely (see Figure 8 above), and that the four assumptions of linear regression are met by the model.
 
-Whether each of the four assumptions of linear regression are met by each model, the following techniques may be used. 
+#### a. Linearity of Data
 
-1. Linearity of Data
-check predicted (kWh) vs predictor (temp) scatter plots generated above
+Linearity of data is checked by plotting the predicted values (predicted energy use) against the predictor values (time, temperature). This method is straightforward when we have only one predictor variable; however, it gets increasingly tedious as the number of predictor variables increase. Another method to check for linearity in data is to plot the residuals against the predicted values. 
+
+The data fulfills this linearity assumption if the residuals are scatted randomly around the zero line.
+
+```{r linearity, fig.width=7, fig.height=3, echo = FALSE, results='hide'}
+
+TOWT_res <- TOWT_model$training_data$eload - TOWT_model$training_data$model_fit
+
+TOWT_res_df <- data.frame("Time" = TOWT_model$training_data$time, "Residuals" = TOWT_res, "Modeled_eload" = TOWT_model$training_data$model_fit)
 
 
-2. Normality of Residuals
-Plot the distribution of residuals as in kWMV for each of the models
+ggplot2::ggplot(TOWT_res_df, aes(x = Modeled_eload, y = Residuals)) +
+  geom_point() +
+  xlab("Modeled eload") +
+  scale_y_continuous(name = "Residuals", labels = scales::comma)+
+  theme_minimal()
 
+```
 
-3. Homoscedasticity
-plot the residuals versus the predicted value, also calculate the ?? metric
+Figure 9: Linearity of Data
 
+#### b. Normality of Residuals
 
-4. Independence of Residuals
-calclulate the correlation coefficient between a residual and its previous value, or plot the lags of residuals (?? this isn't in nmecr - only the three plots are (for 1, 2, and 3)
+Normality of residuals is tested by plotting their histograms.
+
+```{r normality, fig.width=7, fig.height=3, echo = FALSE, results='hide'}
+
+ggplot2::ggplot(TOWT_res_df, aes(x = Residuals)) +
+  geom_histogram(binwidth = 30) +
+  theme_minimal()
+
+```
+
+Figure 10: Normality of Residuals
+
+Residuals, of the Time-of-Week and Temperature model, are normally distributed with a slight left skew. 
+
+#### c. Homoscedasticity
+
+Homoscedasticity, or homogenous variance of residuals, is tested by plotting the residuals over time. Ideally, we would like to see a constant amount of scatter around the zero line. If the scatter increases or decreases over time, the dataset is in violation of this linearity assumption.
+
+```{r homoscesdacity, fig.width=7, fig.height=3, echo = FALSE, results='hide'}
+
+ggplot2::ggplot(TOWT_res_df, aes(x = Time, y = Residuals)) +
+  geom_point() +
+  xlab("Modeled eload") +
+  scale_y_continuous(name = "Residuals", labels = scales::comma)+
+  theme_minimal()
+```
+Figure 11: Homoscedasticity of Residuals
+
+The figure above shows constant variance in residuals.
+
+#### d. Independence of Residuals
+
+When the residuals from different time periods (usually adjacent) are correlated, we say that the residuals are autocorrelated. It occurs in time series data when the errors (residuals) associated with one time period carry over into future time periods.  While this does not affect the unbiasedness of the ordinary least-squares (OLS) estimators, it causes their associated standard errors to be smaller than the true standard errors, leading to the conclusion that the estimates are more precise than they really are.
+
+The `stats` package in R, provides a function to estimate the lag-1 autocorrelation: `acf()`. The package comes pre-loaded with R. 
+
+```{r independence, results='markup', echo=TRUE}
+
+acf(TOWT_res_df$Residuals, lag.max = 1, plot = FALSE)
+
+```
+
+The autocorrelation in the residuals at lag 1 is 0.608. 
+
+As noted above, the Time-of-Week and Temperature models for hourly and daily data have autocorrelation, due to which the associated savings uncertainity estimates are biased. Research is being conducted to create models with reduced autocorrelation. Until then, we present the savings values with the caveat that these may be underestimated. 
